tests/lean/vm_override.lean.expected.out
@[vm_override]
meta def hello : name :=
id_rhs name (name.mk_string "name" (name.mk_string "hello" name.anonymous))
`hello_override.name
`hello.name
`hello_2.name
`hello_override.name
vm_override.lean:40:0: error: unknown declaration 'native.float.mk'
vm_override.lean:45:5: warning: declaration 'native.float₁.mk' uses sorry
vm_override.lean:54:0: error: type mismatch with override:

float₁.rec : Π {C : native.float → Sort l}, (Π (ᾰ : ℕ), C (native.float₁.mk ᾰ)) → Π (n : native.float), C n
native.float₁.rec : ℕ
vm_override.lean:62:5: warning: declaration 'native.float.rec' uses sorry
vm_override.lean:64:5: warning: declaration 'native.float.cases_on' uses sorry
0.5
1.47059e+06
[compiler.inline] 
λ (i : un_nat), ""
[compiler.inline] 
{repr := bin.nat_ovr.repr}
[compiler.inline] 
λ (n ᾰ : un_nat),
  bin.nat.cases_on ᾰ n
    (λ (ᾰ : bin.pos),
       bin.pos.cases_on'._main
         ((λ (ᾰ : un_nat), bin.nat_ovr.succ._main ([bin_example.add._main._meta_aux] n ᾰ)) bin.nat.zero)
         (λ (n_1 : bin.pos),
            (λ (ᾰ : un_nat), bin.nat_ovr.succ._main ([bin_example.add._main._meta_aux] n ᾰ)) (bin.nat.pos n_1))
         ᾰ)
[compiler.inline] 
λ (n : un_nat), add._main n
[compiler.inline] 
λ (ᾰ : ℕ),
  ᾰ.cases_on bin.nat_ovr.zero
    (λ (ᾰ : ℕ),
       bin.nat_ovr.add._main ([bin_example.mk_num._main._meta_aux] ᾰ)
         (bin.nat_ovr.succ._main ([bin_example.mk_num._main._meta_aux] ᾰ)))
[compiler.inline] 
mk_num._main
[compiler.inline] 
λ (ᾰ : un_nat),
  bin.nat.cases_on ᾰ bin.nat_ovr.zero
    (λ (ᾰ : bin.pos),
       bin.pos.cases_on'._main
         ((λ (ᾰ : un_nat),
             bin.nat_ovr.add._main ([bin_example.mk_num'._main._meta_aux] ᾰ)
               (bin.nat_ovr.succ._main ([bin_example.mk_num'._main._meta_aux] ᾰ)))
            bin.nat.zero)
         (λ (n : bin.pos),
            (λ (ᾰ : un_nat),
               bin.nat_ovr.add._main ([bin_example.mk_num'._main._meta_aux] ᾰ)
                 (bin.nat_ovr.succ._main ([bin_example.mk_num'._main._meta_aux] ᾰ)))
              (bin.nat.pos n))
         ᾰ)
[compiler.inline] 
mk_num'._main
11111
[compiler.inline] 
bin.nat_ovr.repr._main (mk_num._main (bit1 (bit0 nat.zero.succ)))
11111
[compiler.inline] 
bin.nat_ovr.repr._main
  (mk_num'._main
     (bin.nat_ovr.succ._main
        (bin.nat_ovr.succ._main
           (bin.nat_ovr.succ._main (bin.nat_ovr.succ._main (bin.nat_ovr.succ._main bin.nat_ovr.zero))))))
[compiler.inline] 
λ (ᾰ : float₃),
  (λ (f : Π (a : ℕ), (λ (ᾰ : float₃), string) (native.float₃.mk a)), unchecked_cast (f nat.zero.succ))
    (λ (ᾰ : ℕ), ᾰ.repr)
[compiler.inline] 
float₃.repr._main
[compiler.inline] 
{repr := float₃.repr}
[compiler.inline] 
native.float₃.mk
1
[compiler.inline] 
float₃.repr._main ((λ (_x : ℕ), native.float.one) (bit1 nat.zero.succ))
[compiler.inline] 
λ (ᾰ : float₃),
  (λ (f : Π (a : ℕ), (λ (ᾰ : float₃), ℕ) (native.float₃.mk a)), unchecked_cast (f nat.zero.succ))
    (λ (ᾰ : ℕ), ᾰ)
[compiler.inline] 
get₂._main
1
[compiler.inline] 
(get₂._main ((λ (_x : ℕ), native.float.one) (bit1 nat.zero.succ))).repr
[compiler.inline] 
native.float₃.cases_on
3
[compiler.inline] 
(bit1 nat.zero.succ).repr
1
[compiler.inline] 
nat.repr
  ((λ (f : Π (a : ℕ), (λ (n : float₃), ℕ) (native.float₃.mk a)), unchecked_cast (f nat.zero.succ))
     (λ (n : ℕ), n))
1
[compiler.inline] 
nat.repr
  ((λ (f : Π (a : ℕ), (λ (n : float₃), ℕ) (native.float₃.mk a)) (n : native.float),
      unchecked_cast (f nat.zero.succ))
     (λ (n : ℕ), n)
     ((λ (_x : ℕ), native.float.one) (bit1 nat.zero.succ)))
